--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,15 +23,32 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  
+  # Service Locator
+  get_it: ^4.0.2
+  
+  # BLOC state management on Presentation layer
+  bloc: ^4.0.0
+  flutter_bloc: ^4.0.0
+  
+  # Object equality by values instead of Dart's default referential equality
+  equatable: ^1.2.0
 
+  # Local cache
+  shared_preferences: ^0.5.7+3
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^0.1.3
+  # Functional programming to error handling (We'll use only the "Either" type)
+  dartz: ^0.9.1
+
+  # Network
+  data_connection_checker: ^0.3.4
+  http: ^0.12.1
 
 dev_dependencies:
   flutter_test:
-    sdk: flutter
+    sdk: flutter 
+  mockito: ^4.1.1
+  faker: ^1.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
