Add Provider plain version

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,9 @@ dependencies:
   data_connection_checker: ^0.3.4
   http: ^0.12.1
 
+  # Others
+  provider: ^4.1.3
+
 dev_dependencies:
   flutter_test:
     sdk: flutter 
