--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,8 +44,9 @@ dependencies:
   data_connection_checker: ^0.3.4
   http: ^0.12.1
 
-  # Others
+  # Others State Management
   provider: ^4.1.3
+  states_rebuilder: ^2.2.0
 
 dev_dependencies:
   flutter_test:
