--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,14 +23,14 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  
+
   # Service Locator
   get_it: ^4.0.2
-  
+
   # BLOC state management on Presentation layer
   bloc: ^6.0.0
   flutter_bloc: ^6.0.0
-  
+
   # Object equality by values instead of Dart's default referential equality
   equatable: ^1.2.0
 
@@ -53,14 +53,14 @@ dependencies:
   states_rebuilder: ^2.2.0
 
 dev_dependencies:
+  test: ^1.15.3
   flutter_test:
-    sdk: flutter 
-  mockito: ^4.1.1
+    sdk: flutter
+  mockito: ^4.1.2
   faker: ^1.2.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
-
 # The following section is specific to Flutter.
 flutter:
 
@@ -68,18 +68,14 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-
   # To add assets to your application, add an assets section, like this:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
-
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
-
   # To add custom fonts to your application, add a fonts section here,
   # in this "flutter" section. Each entry in this list should have a
   # "family" key with the font family name, and a "fonts" key with a
@@ -99,3 +95,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
