--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,8 @@ dependencies:
   # Others State Management
   provider: ^4.1.3
   states_rebuilder: ^3.0.0
+  state_notifier: ^0.6.0
+  flutter_state_notifier: ^0.6.1
 
 dev_dependencies:
   test: ^1.15.3
