--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,8 @@ dependencies:
   flutter_bloc: ^8.1.3
   equatable: ^2.0.5
   bloc: ^8.1.2
+  bloc_concurrency: ^0.2.2
+  stream_transform: ^2.1.0
 
 dev_dependencies:
   flutter_test:
