Add initial caching

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   bloc: ^8.1.2
   bloc_concurrency: ^0.2.2
   stream_transform: ^2.1.0
+  shared_preferences: ^2.1.2
 
 dev_dependencies:
   flutter_test:
