Refactor bloc package location to presentation/using_bloc/character

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   bloc_concurrency: ^0.2.2
   stream_transform: ^2.1.0
   shared_preferences: ^2.1.2
+  cached_network_image: ^3.2.3
 
 dev_dependencies:
   flutter_test:
