--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   intl: any
   bloc_test: ^9.1.3
   provider: ^6.0.5
+  flutter_riverpod: ^2.3.6
 
 dev_dependencies:
   flutter_test:
