--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   flutter_riverpod: ^2.3.6
   get_it: ^7.6.0
   get_it_mixin: ^4.2.0
+  flutter_mobx: ^2.0.6+5
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +66,8 @@ dev_dependencies:
   test: ^1.24.1
   mocktail: ^0.3.0
   mockingjay: ^0.3.0
+  build_runner: ^2.3.3
+  mobx_codegen: ^2.1.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
