--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   provider: ^6.0.5
   shared_preferences: ^2.1.2
   stream_transform: ^2.1.0
+  mobx: ^2.2.1
 
 dev_dependencies:
   flutter_test:
